# grin-multisig

./: .gitignore  NOTICE  README.md
docs/: why-musig2-for-grin.md
poc/: Cargo.toml  README.md
poc/src/: error.rs  lib.rs  main.rs  participant.rs  session.rs  types.rs
