[package]
name = "grin-multisig-poc"
version = "0.1.0"
edition = "2021"
authors = ["Grin MultiSig <grin.multisig@proton.me>"]

[dependencies]
# Use Grin's secp256k1-zkp (production-ready with Pedersen commitments and Bulletproofs)
grin_secp256k1zkp = "0.7.14"
blake2 = "0.10"
# Use rand 0.6 to match grin_secp256k1zkp's dependency
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[dev-dependencies]

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints for better ergonomics
module_name_repetitions = "allow"
must_use_candidate = "allow"
